fix: weather section spacing

--- a/css/main.css
+++ b/css/main.css
@@ -225,13 +225,14 @@ body {
   .weather-content {
     display: flex;
     align-items: flex-start;
-    justify-content: space-around; }
+    justify-content: center; }
     .weather-content form {
       background-color: #fafafa;
       border-radius: 15px;
       box-shadow: -5px 4px 4px 0px rgba(31, 31, 31, 0.6);
       padding: 2em 3em;
-      width: 35%; }
+      width: 35%;
+      margin-right: 3em; }
       .weather-content form fieldset {
         border: none; }
         .weather-content form fieldset #city-name {
